--- a/src/main.bib
+++ b/src/main.bib
@@ -1,3 +1,13 @@
 %! Author = jaggernaute
 %! Date = 4/12/23
 
+@article
+{
+    ahu61,
+    author={Arrow, Kenneth J. and Leonid Hurwicz and Hirofumi Uzawa},
+    title={Constraint qualifications in maximization problems},
+    journal={Naval Research Logistics Quarterly},
+    volume={8},
+    year=1961,
+    pages={175-191}
+}
