--- a/src/main.tex
+++ b/src/main.tex
@@ -6,11 +6,10 @@
 
 \AtBeginDocument{\AtBeginShipoutNext{\AtBeginShipoutDiscard}}
 
-\title{\fontfamily{phv}\selectfont . \{Chapter\}.}
+\title{\fontfamily{phv}\selectfont \textbf{Title}}
 \date{2947}
+\newcommand*{\address}{ISTIC - Universite de Rennes 1}
 \author{John Doe}
-\address{ISTIC - Universite de Rennes 1, \textit{\thedate}}
-\version{1.0}
 
 \begin{document}
 
