--- a/src/main.tex
+++ b/src/main.tex
@@ -41,8 +41,10 @@
 
     \end{titlepage}
 
-    \chapter{Introduction}\label{ch:introduction}
+    \section{Introduction}\label{sec:intro}
+    \subsection{Part A}\label{subsec:a}
     This is a citation~\cite{ahu61}.
+    \subsection{Part B}\label{subsec:b}
 
     \bibliography{main}
     \bibliographystyle{plain}
